--- a/gitconfig.erb
+++ b/gitconfig.erb
@@ -1,20 +1,17 @@
-[user]
-	name = <%= print("Your Name: "); STDOUT.flush; STDIN.gets.chomp %>
-	email = <%= print("Your Email: "); STDOUT.flush; STDIN.gets.chomp %>
-[alias]
-	co = checkout
-[color]
-	diff = auto
-	status = auto
-	branch = auto
 [core]
-	excludesfile = <%= ENV['HOME'] %>/.gitignore
-	editor = mate -w
-	autocrlf = input
-[apply]
-	whitespace = nowarn
-[format]
-	pretty = %C(yellow)%h%Creset %s %C(red)(%an, %cr)%Creset
-[github]
-	user = <%= print("GitHub Username: "); STDOUT.flush; STDIN.gets.chomp %>
-	token = <%= print("GitHub API Token: "); STDOUT.flush; STDIN.gets.chomp %>
+  editor = vim
+[alias]
+  ci = commit
+  co = checkout
+  st = status
+  br = branch
+  lg = "log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit"
+[push]
+  default = simple
+[pull]
+  rebase = true
+[color]
+  ui = true
+[user]
+	name = Steve Lounsbury
+	email = steve.lounsbury@shopify.com
