VIM changes:  - Switch to vim-plug  - Switch to vim-test  - Kill old plugin install system and trim plugin list  - Switch to fzf
Random stuff
 - move over tweaks to zshrc, tmux and gitconfig

--- a/gitconfig.erb
+++ b/gitconfig.erb
@@ -12,6 +12,12 @@
   rebase = true
 [color]
   ui = true
+[diff]
+  algorithm = patience
+[protocol]
+  version = 2
+[credential]
+  helper = osxkeychain
 [user]
-	name = Steve Lounsbury
-	email = steve.lounsbury@shopify.com
+  name = Steve Lounsbury
+  email = steve.lounsbury@shopify.com
